#518 - Folders with permissions are listing in subfolders but not root folder
* Added POST /folders/{indexKey}/moves endpoints